# clr

./: CMakeLists.txt  Info.plist  README.md  __CMakeLists.txt  create_clr_installer_dmg.sh
ClearHost_artefacts/: CMakeCache.txt  cmake_install.cmake
ClearHost_artefacts/CMakeScripts/: ReRunCMake.make
ClearHost_artefacts/ClearHost.xcodeproj/: project.pbxproj
ClearHost_artefacts/ClearHost_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
ClearHost_artefacts/ClearHost_artefacts/JuceLibraryCode/Debug/: Defs.txt
plugins/Contents/Resources/: config.txt  moduleinfo.json
plugins/Contents/_CodeSignature/: CodeResources
src/: main.cpp  main.mm
src/installer/: BlackHoleInstaller.cpp  BlackHoleInstaller.h  InstallerGUI.cpp  InstallerGUI.h  InstallerManager.cpp  InstallerManager.h  PermissionManager.cpp  PermissionManager.h  SystemChecker.cpp  SystemChecker.h
